--- a/DemoPrototype/SettingsPage.xaml
+++ b/DemoPrototype/SettingsPage.xaml
@@ -104,6 +104,7 @@
                         <Button Name="AskForSetHotTankTemp" Margin="0,5,5,5"   Content="SetHotTankTemp" Click="AskForSetHotTankTemp_Click"></Button>
                         <Button Name="AskForSetColdTankTemp"  Margin="5,5,5,5" Content="SetColdTankTemp" Click="AskForSetColdTankTemp_Click"></Button>
                         <Button Name="AskForValves"  Margin="5,5,5,5" Content="GetValves" Click="AskForValves_Click" ></Button>
+                        <Button Name="TestMatrix" Margin="5,5,5,5" Content="Matrix" Click="TestMatrix_Click"></Button>
                     </StackPanel>
                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal" >
                         <Button Name="AskForTHot2Cold"  Margin="0,0,5,5" Content="THot2Cold" Click="AskForTHot2Cold_Click"></Button>
