--- a/DemoPrototype/CalibratePage.xaml
+++ b/DemoPrototype/CalibratePage.xaml
@@ -163,8 +163,8 @@
         <ComboBox Grid.Row="2" Grid.Column="12" HorizontalAlignment="Left" VerticalAlignment="Center"   Foreground="Black" Name="MouldSource" SelectionChanged="MouldSource_SelectionChanged" Margin="10,11,0,0" ></ComboBox>
 
         <TextBlock  Grid.Row="3" Grid.Column="7" Grid.ColumnSpan="2" Margin="0,17,0,0" VerticalAlignment="Top" Text="Return hose"  Foreground="Black" HorizontalAlignment="Left"></TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="8" Grid.ColumnSpan="2" Margin="10,12,0,0" Width="30" VerticalAlignment="Top" HorizontalAlignment="Left" IsReadOnly="True" Foreground="Black" Name="HotRetHose"  TextChanged="HotRetHose_TextChanged"  Text="-"></TextBox>
-        <TextBox Grid.Row="3" Grid.Column="9" VerticalAlignment="Top"  HorizontalAlignment="Left" Width="30" Margin="0,12,0,0"  Foreground="Black" IsReadOnly="True" Name="ColdRetHose" Text="-"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="8" Grid.ColumnSpan="2" Margin="10,12,0,0" Width="30" VerticalAlignment="Top" HorizontalAlignment="Left" IsReadOnly="True" IsEnabled="False" Foreground="Black" Name="HotRetHose"  TextChanged="HotRetHose_TextChanged"  Text="-"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="9" VerticalAlignment="Top"  HorizontalAlignment="Left" Width="30" Margin="0,12,0,0"  Foreground="Black" IsReadOnly="True" IsEnabled="False" Name="ColdRetHose" Text="-"></TextBox>
         <ComboBox Grid.Row="3" Grid.Column="12" HorizontalAlignment="Left" VerticalAlignment="Top" IsEnabled="False" Name="ReturnHoseSource" Foreground="Black" Margin="10,12,0,0" ></ComboBox>
 
         <TextBlock  Grid.Row="4" Grid.Column="7" Grid.ColumnSpan="2" Margin="0,7,0,0" VerticalAlignment="Top" Text="Total"  Foreground="Black" HorizontalAlignment="Left"></TextBlock>
@@ -209,6 +209,7 @@
 
         <!--Energy balance chart-->
         <chart:SfChart  
+            Visibility="Collapsed"
             Header="Energy (Hot and Cold tanks) (°C)"
             Grid.Row="5"
             Grid.RowSpan="5"
@@ -257,6 +258,7 @@
 
         <!-- Volume balance chart-->
         <chart:SfChart  
+            Visibility="Collapsed"
             Header="Volume (Buffer tank) (°C)"
             Grid.Row="5"
              Grid.Column="6"
@@ -296,9 +298,9 @@
         </chart:SfChart>
 
         <!-- Lower border-->
-        <Border  Margin="5,5,10,5" Grid.Row="5" Grid.RowSpan="7" Grid.Column="0" Grid.ColumnSpan="13" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5">
+        <Border  Visibility="Collapsed" Margin="5,5,10,5" Grid.Row="5" Grid.RowSpan="7" Grid.Column="0" Grid.ColumnSpan="13" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5">
             <StackPanel Orientation="Vertical" Margin="0,0,0,0">
-                <TextBlock Margin="5,0,0,0" Text="Balancing" FontWeight="SemiBold"></TextBlock>
+                <TextBlock Visibility="Collapsed" Margin="5,0,0,0" Text="Balancing" FontWeight="SemiBold"></TextBlock>
             </StackPanel>
         </Border>
 
@@ -313,7 +315,7 @@
         <TextBox Visibility="Collapsed" Grid.Column="3" Grid.Row="7" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="Yellow" Text="{x:Bind BufMidThresholdValue.Text}"></TextBox>
 
         <!-- Feed and return timing -->
-
+<!--
         <TextBlock Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2"  Margin="70,10,0,0"  Text="Shift Return valve Switch time (s)" VerticalAlignment="Top"></TextBlock>
         <TextBlock Margin="0,10,0,0" Grid.Row="10" Grid.Column="2"  HorizontalAlignment="Left"> Calibrate</TextBlock>
         <TextBlock Margin="0,10,0,0" Grid.Row="10" Grid.Column="3" Grid.ColumnSpan="3" Text="+"></TextBlock>
@@ -327,9 +329,9 @@
         <TextBlock Grid.Row="10" Grid.Column="3" Grid.ColumnSpan="1" Width="30" Margin="0,20,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Name="EATuneText"   Text="33"></TextBlock>
         <TextBlock  Grid.Row="10" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,20,0,0" Text="="></TextBlock>
         <TextBlock  Grid.Row="10" Grid.Column="4" Grid.ColumnSpan="2" HorizontalAlignment="Left" Name="EATotalText" Margin="50,20,0,0" VerticalAlignment="Center" Text="122"></TextBlock>
-
+-->
         <!-- Volume active timing -->
-
+<!--
         <TextBlock Grid.Row="10" Grid.Column="6" Grid.ColumnSpan="3"  Margin="30,10,0,0"  Text="Change Return Valve Switching Period (s)" VerticalAlignment="Top"></TextBlock>
         <TextBlock Grid.Row="10" Grid.Column="6" Grid.ColumnSpan="2"  Margin="50,26,0,0"  Text="" VerticalAlignment="Top"></TextBlock>
         <TextBlock Margin="80,10,0,0" Grid.Row="10" Grid.Column="8" Grid.ColumnSpan="2" > Calibrate</TextBlock>
@@ -345,6 +347,6 @@
         <TextBlock  Grid.Row="10" Grid.Column="11" Grid.ColumnSpan="1" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2,20,0,0" Text="="></TextBlock>
         <TextBlock  Grid.Row="10" Grid.Column="12" Name="VATotalText" Margin="5,20,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" Text="122"></TextBlock>
 
-
+-->
     </Grid>
 </Page>
